[metadata]
name = python-edotenv
version = 0.0.0
author = Richard Wen
author_email = rrwen.dev@gmail.com
description = Save and load environmental variables using .env files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rrwen/python-edotenv
project_urls =
    Bug Tracker = https://github.com/rrwen/python-edotenv/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir == src
packages = find:
# install_requires = 
    # package1
    # package2
python_requires = >=3.8

[options.packages.find]
where = src